; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_meta.c_str2num.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_meta.c_str2num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @str2num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @str2num(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i64 @tvisnum(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  store i32* %10, i32** %3, align 8
  br label %35

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i64 @tvisint(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %11
  %16 = load i32*, i32** %5, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i64 @intV(i32* %17)
  %19 = trunc i64 %18 to i32
  %20 = call i32* @setnumV(i32* %16, i32 %19)
  %21 = load i32*, i32** %5, align 8
  store i32* %21, i32** %3, align 8
  br label %35

22:                                               ; preds = %11
  %23 = load i32*, i32** %4, align 8
  %24 = call i64 @tvisstr(i32* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %34

26:                                               ; preds = %22
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @strV(i32* %27)
  %29 = load i32*, i32** %5, align 8
  %30 = call i64 @lj_strscan_num(i32 %28, i32* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %26
  %33 = load i32*, i32** %5, align 8
  store i32* %33, i32** %3, align 8
  br label %35

34:                                               ; preds = %26, %22
  store i32* null, i32** %3, align 8
  br label %35

35:                                               ; preds = %34, %32, %15, %9
  %36 = load i32*, i32** %3, align 8
  ret i32* %36
}

declare dso_local i64 @tvisnum(i32*) #1

declare dso_local i64 @tvisint(i32*) #1

declare dso_local i32* @setnumV(i32*, i32) #1

declare dso_local i64 @intV(i32*) #1

declare dso_local i64 @tvisstr(i32*) #1

declare dso_local i64 @lj_strscan_num(i32, i32*) #1

declare dso_local i32 @strV(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
